make text unselectable

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 			    background-color: white;
 			    padding: 0px;
 			    margin: 0px;
+			    /* unselectable text */
+			    -webkit-touch-callout: none;
+			    -webkit-user-select: none;
+			    -khtml-user-select: none;
+			    -moz-user-select: none;
+			    -ms-user-select: none;
+			    user-select: none;
 		    }
 		    button { cursor: pointer; }
 		    #topbar, #bottombar {
