--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
 					<p>Il existe deux niveaux de grilles : les faciles (FORCE 1 et 2) et les difficiles (FORCE 3 et 4).</p>
 					<p>Quelque soit le type de grille, tous les mots utilisés sont présents dans le dictionnaire officiel du Scrabble (ODS7). Ils peuvent être des verbes conjugués mais pas des expressions ou des mots composés, des sigles ou des abréviations, des symboles chimiques ou des noms propres.</p>
 					<p>Les grilles faciles sont générées à partir de 73 638 mots relativement fréquents de la langue française et ressemblent probablement plus aux grilles de jeux qu'on a coutume de trouver dans les magazines.</p>
-					<p>Les grilles difficiles sont réservées aux purisites et aux joueurs de Scrabble invétérés, elles sont générées à partir de 393 402 mots dont certains sont très rares !</p>
+					<p>Les grilles difficiles sont réservées aux puristes et aux joueurs de Scrabble invétérés, elles sont générées à partir de 393 402 mots dont certains sont très rares !</p>
 				</div>		
 				<div id="game">
 					<div id="grid">
