--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 				    display: none !important;
 			    }
 		    }
+			:root:before {
+			  content: url(/img/soundoff.png);
+			  /* partial fallback */
+			  background-image: url(/img/soundoff.png);
+			  visibility: hidden;
+			  position: absolute;
+			  left: -999em;
+			}		    
 		    body {
 			    background-color: white;
 			    padding: 0px;
