--- a/kids/index.html
+++ b/kids/index.html
@@ -13,10 +13,10 @@
 	    <link rel="canonical" href="//mokole.com/kids/">
 	    <style>
 		    img {
-			    cursor: url("/img/kids/hand1-64.png");
+			    cursor: url("/img/kids/hand1-64.png"), auto;
 		    }
 		    img:active {
-			    cursor: url("/img/kids/hand2-64.png");
+			    cursor: url("/img/kids/hand2-64.png"), auto;
 		    }
 		</style>
 	</head>
