--- a/kids/index.html
+++ b/kids/index.html
@@ -14,6 +14,12 @@
 	    <style>
 		    img {
 			    cursor: url("/img/kids/hand1-64.png"), auto;
+				user-drag: none; 
+				user-select: none;
+				-moz-user-select: none;
+				-webkit-user-drag: none;
+				-webkit-user-select: none;
+				-ms-user-select: none;
 		    }
 		    img:active {
 			    cursor: url("/img/kids/hand2-64.png"), auto;
