--- a/kids/index.html
+++ b/kids/index.html
@@ -15,9 +15,11 @@
 		    img {
 			    cursor: url("/img/kids/hand1-64.png"), auto;
 				user-drag: none; 
+				-webkit-user-drag: none;
+				-moz-user-drag: none;
+				-ms-user-drag: none;
 				user-select: none;
 				-moz-user-select: none;
-				-webkit-user-drag: none;
 				-webkit-user-select: none;
 				-ms-user-select: none;
 		    }
