--- a/kids/index.html
+++ b/kids/index.html
@@ -12,7 +12,7 @@
 		<link rel="manifest" href="/kids/manifest.json">
 	    <link rel="canonical" href="//mokole.com/kids/">
 	    <style>
-		    img {
+		    body {
 			    cursor: url("/img/kids/hand1-64.png"), auto;
 				user-drag: none; 
 				-webkit-user-drag: none;
@@ -23,13 +23,12 @@
 				-webkit-user-select: none;
 				-ms-user-select: none;
 		    }
-		    img:active {
+		    body:active {
 			    cursor: url("/img/kids/hand2-64.png"), auto;
 		    }
 		</style>
 	</head>
 	<body>
-		<img src="/img/kids/touch-click.png">
 		<script type="text/javascript">
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
