--- a/kids/index.html
+++ b/kids/index.html
@@ -13,7 +13,7 @@
 	    <link rel="canonical" href="//mokole.com/kids/">
 	    <style>
 		    .main {
-			    cursor: url("/img/kids/hand1-64.png"), auto;
+			    cursor: url("/img/kids/hand1-64.png"), pointer;
 				user-drag: none; 
 				-webkit-user-drag: none;
 				-moz-user-drag: none;
@@ -24,7 +24,7 @@
 				-ms-user-select: none;
 		    }
 		    .main:active {
-			    cursor: url("/img/kids/hand2-64.png"), auto;
+			    cursor: url("/img/kids/hand2-64.png"), pointer;
 		    }
 		</style>
 	</head>
