prevent screen from flashing on touch

--- a/kids/index.html
+++ b/kids/index.html
@@ -38,6 +38,7 @@
 			    color: black;
 			    margin: 0px;
 			    padding: 0px;
+				-webkit-tap-highlight-color: rgba(0,0,0,0);
 			    /* unselectable text */
 			    -webkit-touch-callout: none;
 			    -webkit-user-select: none;
