--- a/kids/index.html
+++ b/kids/index.html
@@ -28,10 +28,10 @@
 			    .volume { margin-right: 0px !important; }
 		    }
 			@keyframes pulse {
-				25% { transform: scale(1.1); }
-				75% { transform: scale(.9); }
+				50% { transform: scale(.9); }
 			}
 		    /* */
+		    div { margin: 0px; padding: 0px; }
 		    body {
 			    font-family: Arial, Helvetica, sans-serif;
 			    background-color: white;
@@ -101,6 +101,10 @@
 				animation-timing-function: linear;
 				animation-iteration-count: 2;			    
 		    }
+			.pulse:active {
+				animation: none;
+				transform: scale(0.9);
+			}
 		    .screen-container {
 			    position: absolute;
 			    width: 100%;
@@ -125,6 +129,55 @@
 			    background-image: url(img/tinified/wood-bg-02.png);
 			    background-repeat: repeat;
 		    }
+			#keyboard {
+				position: absolute;
+				width: 100%;
+				bottom: 0px;
+				text-align: center;
+				overflow-y: hidden;
+			}
+			.keyboard-row {
+				margin: 0px auto;
+				width: 100%;
+				clear: both;
+			}
+			.keyboard-button {
+				position: relative;
+				opacity: 1;
+			    margin: 0px 4px 4px 0px;
+			    color: rgba(255, 255, 255, 0.8);
+			    background-color: transparent;
+			    width: 128px;
+			    height: 128px;
+			    float: left;
+			    font-size: 118px;
+			    line-height: 128px;
+			    text-align: center;
+			    vertical-align: middle;
+			    font-weight: bold;
+			    box-shadow: 2px 2px 1px 1px rgba(0,0,0,0.5);
+			    background-image: url(img/tinified/wood-bg-01.png);
+			    background-repeat: repeat;
+			    background-size: cover;			
+			}		
+			.keyboard-button-error:after {
+				position: absolute;
+				content: "";
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(218, 11, 44, 0.4);
+			}
+			.keyboard-button-success:after {
+				position: absolute;
+				content: "";
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(23, 159, 59, 0.4);				
+			}
 		    .modal {}
 		    .modal-overlay {}
 		    .closed { display: none; }
@@ -152,6 +205,8 @@
 			<div id="screen-container" class="screen-container">
 				<div id="welcome-screen" class="screen closed"></div>
 				<div id="game-screen" class="screen playground">
+					<div id="puzzle"></div>
+					<div id="keyboard"></div>
 				</div>
 				<div id="share-screen" class="screen closed"></div>
 			</div>
@@ -163,6 +218,30 @@
 		<div id="bad-score" class="modal closed"></div>
 		<div id="modal-overlay" class="modal-overlay closed"></div>
 		<script type="text/javascript">
+			// Generate initial keyboard in playground screen			
+			var ABC = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+			r = document.createElement("div");
+			r.className  = "keyboard-row";
+			for (i = 0; i < ABC.length; i++) {
+				b = document.createElement("div");
+				b.id = "L_" + i;
+				b.className = "keyboard-button pulse";
+				b.onclick = function(event) {
+					e = event.target || event.srcElement;
+					if (e.classList.contains("pulse")) {
+						e.classList.remove("pulse");
+						if (Math.random() < 0.5) e.classList.add("keyboard-button-error");
+						else e.classList.add("keyboard-button-success");						
+					}
+				};
+				b.innerHTML = ABC.charAt(i);
+				r.appendChild(b);
+			}
+			c = document.createElement("div");
+			c.id = "keyboard";
+			c.appendChild(r);
+			document.getElementById("game-screen").replaceChild(c, document.getElementById("keyboard"));
+			
 			function toggle_sound(e) {
 				if (e.classList.contains("unmute")) {
 					e.classList.remove("unmute");
@@ -172,6 +251,64 @@
 					e.classList.add("unmute");
 				}
 			}
+			function resize_keyboard() {
+				h = document.getElementById("game-screen").getBoundingClientRect().height;
+				w = document.getElementById("game-screen").getBoundingClientRect().width;
+				if (h > w) {
+					// Portait mode, keyboard's height will be 5/12 
+					h = h * 5/12;
+				} else {
+					// Landscape mode, keyboard's height will be 1/3
+					h = h / 3;
+				}
+				// Find the optimal size for keyboard buttons
+				d = 4; // marginBottom or marginRight to add to button size
+				n = ABC.length;
+				px = Math.ceil(Math.sqrt(n * w / h));
+				if (Math.floor(px * h / w) * px < n) {
+					sx = h / Math.ceil(px * h / w);
+				} else {
+					sx = w / px;
+				}
+				py = Math.ceil(Math.sqrt(n * h / w));
+				if (Math.floor(py * w / h) * py < n) {
+					sy = w / Math.ceil(py * w / h);
+				} else {
+					sy = h / py;
+				}
+				button_size = Math.floor(Math.max(sx, sy) - d);
+				buttons_per_row = Math.floor(w / button_size);
+				buttons_per_row = Math.ceil(n / buttons_per_row);
+				buttons_per_row = Math.ceil(n / buttons_per_row);
+				c = document.createElement("div")
+				c.id = "keyboard";
+				r = null;
+				for (i = 0; i < n; i++) {
+					if (i % buttons_per_row == 0) {
+						if (r) {
+							r.style.width = (button_size + d) * r.childNodes.length + "px";
+							c.appendChild(r);
+						}
+						r = document.createElement("div");
+						r.className = "keyboard-row";
+					}
+					b = document.getElementById("L_" + i);
+					b.style.width = button_size + "px";
+					b.style.height = button_size + "px";
+					b.style.fontSize = button_size - 10 + "px";
+					b.style.lineHeight = button_size + "px";
+					r.appendChild(b);					
+				}
+				if (r.childNodes.length > 0) {
+					r.style.width = (button_size + d) * r.childNodes.length + "px";
+					c.appendChild(r);
+				}
+				document.getElementById("game-screen").replaceChild(c, document.getElementById("keyboard"));
+			}
+			window.addEventListener("resize", function() {
+				resize_keyboard();
+			}, false);
+			resize_keyboard()
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
 					navigator.serviceWorker.register("/service-worker.js");
