tooltip on mute/unmute

--- a/kids/index.html
+++ b/kids/index.html
@@ -117,6 +117,33 @@
 			    margin-left: -1em;
 			    margin-right: 1vmin;
 		    }
+		    .mute:after, .unmute:after {
+			    opacity: 0;
+			    content: "";
+		    }
+		    .mute:active:after, .unmute:active:after {
+			    content: "";
+			    opacity: 0;
+			    display: none;
+		    }
+		    .mute:hover:after, .unmute:hover:after {
+			    transition: opacity .3s linear 1s;
+			    color: rgba(255, 255, 255, 1);
+			    background-color: rgba(0, 0, 0, 1);
+			    position: absolute;
+			    white-space: nowrap;
+			    padding: 1ex 1em;
+			    opacity: 1;
+			    text-align: center;
+			    top: 64px;
+			    right: 20px;
+		    }
+		    .mute:hover:after {
+			    content: "Couper le son";
+		    }
+		    .unmute:hover:after {
+			    content: "Remettre le son";
+		    }
 		    .pulse:hover {
 			    animation-name: pulse;
 				animation-duration: .4s;
