handling focus on mute/unmute

--- a/kids/index.html
+++ b/kids/index.html
@@ -121,7 +121,7 @@
 			    opacity: 0;
 			    content: "";
 		    }
-		    .mute:active:after, .unmute:active:after {
+		    .mute:active:after, .unmute:active:after, .mute:focus:after, .unmute:focus:after {
 			    content: "";
 			    opacity: 0;
 			    display: none;
