--- a/kids/index.html
+++ b/kids/index.html
@@ -231,7 +231,7 @@
 		    .modal-overlay {}
 		    .overlay {
 			    position: fixed;
-			    top: 0px;
+			    top: 54px;
 			    left: 0px;
 			    width: 100%;
 			    height: 100%;
@@ -246,6 +246,7 @@
 			    top: 50%;
 			    left: 50%;
 			    transition: top 0.5s ease-in-out, left 0.5s ease-in-out, background-image 0.25s linear 0.5s;
+			    transform: translateY(-54px);
 		    }
 		    .cursor-active { background-image: url(img/tinified/hand2-64.png) !important; }
 		    .closed { display: none; }
